# bauamt-mcp-permit-agent

./: .env.example  .gitattributes  .gitignore  README.md  architecture.md  demo-script.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: bauamt_permits.db
docs/: claude_desktop_config.example.json  mcp-inspector-test-guide.md  security-notes.md
sql/: schema.sql
src/bauamt_mcp/: db.py  seed.py  server.py  smoke_demo.py  tools.py
tests/: test_tools.py
