[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bauamt-mcp-permit-agent"
version = "0.1.0"
description = "Local MCP server exposing a synthetic German Bauamt permit workflow to Claude."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Rafiqus Salehin" }
]
dependencies = [
    "mcp",
    "faker",
    "pytest",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]